--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="calculadora">
-        
-        <p>Combustível</p>
-        <label for="dinhero">R$</label>
-        <input type="number" placeholder="Digite o valor" name="valor_cumbustível">
-        <p>Tipo de Combustível</p>
-        <input type="radio" id="Gasolina" name="tipo_combustível" value="Gasolina">
-        <label for="Gasolina">Gasolina</label><br>
-        <input type="radio" id="Etanol" name="tipo_combustível" value="Etanol">
-        <label for="Etanol">Etanol</label><br>
+    <div id="div_conteiner">
+
+        <div id="div_Combustível">
+            <p>Combustível</p>
+            <label for="dinhero">R$</label>
+            <input type="number" placeholder="Digite o valor" name="valor_cumbustível">
+        </div>
+
+        <div id="div_tipo_combustível">
+            <p>Tipo de Combustível</p>
+            <input type="radio" id="Gasolina" name="tipo_combustível" value="Gasolina">
+            <label for="Gasolina">Gasolina</label><br>
+            <input type="radio" id="Etanol" name="tipo_combustível" value="Etanol">
+            <label for="Etanol">Etanol</label><br>
+        </div>
 
     </div>
 </body>
